# clQMC

./: README.md  index.html  params.json
doc/: Makefile  clQMC.bib  clQMC.doxy
htmldocs/: DocsTutorial_2common_8clh-example.html  DocsTutorial_2example1_8c-example.html  DocsTutorial_2example1_kernel_8cl-example.html  DocsTutorial_2example2_8c-example.html  DocsTutorial_2example2_kernel_8cl-example.html  DocsTutorial_2example3_8c-example.html  DocsTutorial_2example3_kernel_8cl-example.html  DocsTutorial_2example4_8c-example.html  DocsTutorial_2example4_kernel_8cl-example.html  citelist.html  clQMC_8clh.html  clQMC_8h.html  clQMC_8h_source.html  clQMC__template_8h.html  clQMC__template_8h_source.html  dir_331fdd27cdf06cbd8d4a6b8b1d9e62bc.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  examples.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  index.html  latticerule_8clh.html  latticerule_8h.html  latticerule_8h_source.html  pages.html  todo.html
htmldocs/search/: all_1.js  defines_0.js  enums_0.js  files_0.js  files_1.js  functions_0.js  searchdata.js  typedefs_0.js
src/: CMakeLists.txt
src/client/: CMakeLists.txt  common.c  common.h  selfcontained.c
src/client/DocsTutorial/: common.c  common.clh  common.h  example1.c  example1_kernel.cl  example2.c  example2_kernel.cl  example3.c  example3_kernel.cl  example4.c  example4_kernel.cl
src/include/clQMC/: clQMC.clh  clQMC.h  clQMC.version.h.in  clQMC_template.h  latticerule.clh  latticerule.h
src/include/clQMC/private/: latticerule.c.h
